k8s-global/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "app.recette.local"      # ← sera surchargé par overlay
    http:
      paths:
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: service-users
            port:
              number: 3001
      - path: /api/products
        pathType: Prefix
        backend:
          service:
            name: service-products
            port:
              number: 3002
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
